integrating internal OCR endpoint and improving text decoding (minor changes)
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>